# kaggle-global-wheat-detection

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: README.md
src/kaggle_global_wheat_detection/config/: data_catalog.yaml  detr.yaml
src/kaggle_global_wheat_detection/node/feature_maker/: make_bbox.py
src/kaggle_global_wheat_detection/utils/: average_meter.py  fix_seeds.py
