[tool.poetry]
name = "kaggle-global-wheat-detection"
version = "0.1.0"
description = ""
authors = ["dondakeshimo <went.went.takkun135@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
